# real_world_reason

./: .env  .gitignore  Makefile  fmt.sh  jbuild-workspace.dev  real_world.opam
examples/: example1.csv  example2.csv
lib/: Main.ml  comp.ml  comp.re  counter.mli  demo.re  dune  err.ml  err.re  freq.ml  freq.re  freq_.re  funct.ml  funct.re  funct_.re  jbuild  ls_assoc.re  main.ml  main.re  main_.re  map_counter.re  map_example.ml  map_example.re  monoid.ml  monoid.re  run.ml  run.re  typ.ml  typ.re
lib/sub/: demi.ml  demi.re  jbuild
test/: jbuild  test.ml  test.re
web/: jbuild
