opam-version: "2.0"
name: "real_world"
version: "1.0.0"
maintainer: "Michel Perez <michel.ingesoft@gmail.com>"
authors: ["Michel Perez <michel.ingesoft@gmail.com>"]
homepage: ""
bug-reports: ""
dev-repo: ""
license: ["ISC"]
tags: []
build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "core"
  "jbuilder" {build}
]
